Fix z-index class rule to the right format.

--- a/cocktail.css
+++ b/cocktail.css
@@ -402,15 +402,15 @@
   transform: translate(-50%, -50%);
 }
 
-.z-1 {
+.z-index-1 {
   z-index: 1;
 }
 
-.z-2 {
+.z-index-2 {
   z-index: 2;
 }
 
-.z-3 {
+.z-index-3 {
   z-index: 3;
 }
 
